# rustythook

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  Cargo.toml  README.md  RELEASING.md  faq.html  index.html  print.html  release.toml  searchindex.js  toc.html  toc.js
.github/workflows/: auto-version.yml  common-build.yml  docs.yml  publish-brew.yml  publish-cargo.yml  publish-chocolatey.yml  publish-docker-hub.yml  publish-fnm.yml  publish-ghcr.yml  publish-github-packages.yml  publish-npm.yml  publish-pypi.yml  publish-scoop.yml  publish-winget.yml  release.yml  test.yml
.junie/: guidelines.md
.rustyhook/: config.yaml
advanced/: custom-hooks.html  monorepo.html  performance.html
contributing/: architecture.html  development-setup.html  testing.html
docker/: Dockerfile  README.md
docs/: build.md  build.txt  node.md  plan.md  ruby.md  tasks.md
docs/.rustyhook/: config.yaml
docs/book/: .gitignore  README.md  book.toml
packaging/chocolatey/: rustyhook.nuspec
packaging/npm/: install.js  (+1 more)
reference/: configuration-reference.html  hook-types.html  supported-languages.html
schemas/: rustyhook-config.json  rustyhook-config.yaml
src/: lib.rs  logging.rs  main.rs
tests/: cli_tests.rs  compat_tests.rs  config_tests.rs  docker_tests.sh  hook_execution_tests.rs  hooks_tests.rs  node_toolchain_tests.rs  precommit_config_tests.rs  ruby_toolchain_tests.rs  toolchain_tests.rs  version_tests.rs
theme/: custom.css  custom.js
user-guide/: cli-usage.html  configuration.html  getting-started.html  installation.html  migration.html  shell-completions.html
(+46 files in other folders)
