[package]
name = "rustyhook"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
globset = "0.4"
which = "5.0"
tokio = { version = "1.35", features = ["full"] }
walkdir = "2.4"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
fern = "0.6"
chrono = "0.4"

[[bin]]
name = "rh"
path = "src/bin/rh.rs"
